# imgwalk

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  help.h  main.cpp
core/: CMakeLists.txt  core.h  filter.cpp  filter.h  format.cpp  format.h  match.h  search.cpp  search.h
test/: CMakeLists.txt  test_main.cpp
